--- a/urara/2022-07-27-bin.md
+++ b/urara/2022-07-27-bin.md
@@ -3,7 +3,7 @@ title: JS中的二进制数字
 created: 2022-07-27
 summary: 0b/0B和paresInt
 tags:
-  - JavsScript
+  - JavaScript
 ---
 
 参考：[How to Represent Binary Numbers in JavaScript? - Designcise](https://www.designcise.com/web/tutorial/how-to-represent-binary-numbers-in-javascript)
